<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="rmutr.boonsathain.wanwisa.checkfishingboat.boat_out_view">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView6"
        android:background="#82ffffff" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boatout1"
                android:id="@+id/textView89"
                android:textSize="@dimen/h2"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/text" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText69"
                    android:layout_weight="1"
                    android:textColor="@color/text"
                    android:inputType="text" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/boatout2"
                    android:id="@+id/textView90"
                    android:textSize="@dimen/h3"
                    android:layout_weight="1"
                    android:textColor="@color/text" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/boatout3"
                    android:id="@+id/textView91"
                    android:textSize="@dimen/h3"
                    android:layout_weight="1"
                    android:textColor="@color/text" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText70"
                    android:layout_weight="1"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/boatout5"
                    android:id="@+id/textView92"
                    android:textSize="@dimen/h3"
                    android:layout_weight="2"
                    android:textColor="@color/text" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText71"
                    android:layout_weight="1"
                    android:textColor="@color/text"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/boatout6"
                    android:id="@+id/textView93"
                    android:textSize="@dimen/h3"
                    android:layout_weight="1"
                    android:textColor="@color/text" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText72"
                    android:layout_weight="1"
                    android:textColor="@color/text"
                    android:inputType="text" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/boatout7"
                    android:id="@+id/textView94"
                    android:textSize="@dimen/h3"
                    android:layout_weight="1"
                    android:textColor="@color/text" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText73"
                    android:layout_weight="1"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/boatout8"
                    android:id="@+id/textView95"
                    android:textSize="@dimen/h3"
                    android:layout_weight="2"
                    android:textColor="@color/text" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText74"
                    android:layout_weight="1"
                    android:textColor="@color/text"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/boatout9"
                    android:id="@+id/textView96"
                    android:textSize="@dimen/h3"
                    android:layout_weight="1"
                    android:textColor="@color/text" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText75"
                    android:layout_weight="1"
                    android:textColor="@color/text"
                    android:inputType="text" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/boatout10"
                    android:id="@+id/textView97"
                    android:textSize="@dimen/h3"
                    android:layout_weight="1"
                    android:textColor="@color/text" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText76"
                    android:layout_weight="1"
                    android:inputType="text" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/boatout11"
                    android:id="@+id/textView98"
                    android:textSize="@dimen/h3"
                    android:layout_weight="1"
                    android:textColor="@color/text" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText77"
                    android:layout_weight="1"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/boatout21"
                    android:id="@+id/textView99"
                    android:textSize="@dimen/h3"
                    android:layout_weight="1"
                    android:textColor="@color/text" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText78"
                    android:layout_weight="1"
                    android:textColor="@color/text"
                    android:inputType="text" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/boatout13"
                    android:id="@+id/textView100"
                    android:textSize="@dimen/h3"
                    android:layout_weight="1"
                    android:textColor="@color/text" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText79"
                    android:layout_weight="1"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/boatout14"
                    android:id="@+id/textView101"
                    android:textSize="@dimen/h3"
                    android:layout_weight="1"
                    android:textColor="@color/text" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText80"
                    android:layout_weight="1"
                    android:textColor="@color/text"
                    android:inputType="text" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/boatout15"
                    android:id="@+id/textView102"
                    android:textSize="@dimen/h3"
                    android:layout_weight="1"
                    android:textColor="@color/text" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText81"
                    android:layout_weight="1"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/boatout16"
                    android:id="@+id/textView103"
                    android:textSize="@dimen/h3"
                    android:layout_weight="1"
                    android:textColor="@color/text" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText82"
                    android:layout_weight="1"
                    android:textColor="@color/text"
                    android:inputType="text" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/boatout17"
                    android:id="@+id/textView104"
                    android:textSize="@dimen/h3"
                    android:layout_weight="1"
                    android:textColor="@color/text" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText83"
                    android:layout_weight="1"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/boatout18"
                    android:id="@+id/textView105"
                    android:textSize="@dimen/h3"
                    android:layout_weight="1"
                    android:textColor="@color/text" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText84"
                    android:layout_weight="1"
                    android:textColor="@color/text"
                    android:lines="4"
                    android:gravity="top"
                    android:hint="ใช้ / แยกลูกเรือ"
                    android:inputType="text" />
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="ย้อนกลับ"
                android:id="@+id/button17"
                android:onClick="boat_out_list" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
